# localcooking-app

./: CHANGELOG.md  figlet  index.html  localcooking-app.cabal  result  stack.yaml
nix/: base.nix
src/: Auth0.hs  Main.hs
src/Auth0/: Await.hs
