cabal-version:       2.4
name:                localcooking-app
version:             0.1.0.0

executable localcooking-app
  main-is:             Main.hs
  other-modules:       Auth0
   , Auth0.Await
  build-depends:       base ^>=4.12.0.0
   , Shpadoinkle
   , Shpadoinkle-backend-snabbdom
   , Shpadoinkle-console
   , Shpadoinkle-html
   , deepseq
   , ghcjs-base
   , jsaddle
   , lens
   , stm

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:
    -- -Wall
    -- -Werror
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities

  ghcjs-options:
    -- -Wall
    -- -Werror
    -Wcompat
    -fno-warn-missing-home-modules
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
    -O2


